--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <meta name="description" content="Website of Rose A. Lacroix. Developper, writer, artist.">
       <meta name="keywords" content="Rose Lacroix,Rose A Lacroix,Rose Reaper,Rosereaper,DAZ Studio,Marvelous Designer,The Aroostook Witch">
       <meta name="author" content="Rose A. Lacroix">
-      <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+      <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
       <link rel="stylesheet" href="styles/style.css"/>
 
@@ -20,23 +20,23 @@
   <body>
 
 <!-- Navbar -->
-  <div class="container">
+  <div class="container-flex">
     <div class="row justify-content-center">
-      <div class="col-md-10">
+      <div class="col-md-12">
         <ul class="navbar nav justify-content-center nav-fill">
-          <li class="nav-item bg-secondary">
+          <li class="nav-item">
             <a class="nav-link active" href="index.html">Home</a>
           </li>
-          <li class="nav-item bg-secondary">
+          <li class="nav-item">
             <a class="nav-link" href="#">My projects</a>
           </li>
           <li class="nav-logo">
-            <a href="index.html"><img src="https://via.placeholder.com/350x200.png?text=LOGO"></a>
+            <a href="index.html"><img class="logo_nav" src="assets/images/logo_nav.png"></a>
           </li>
-          <li class="nav-item bg-secondary">
+          <li class="nav-item">
             <a class="nav-link" href="#">About me</a>
           </li>
-          <li class="nav-item bg-secondary">
+          <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
           </li>
         </ul>
@@ -110,10 +110,10 @@
   <div class="container-fluid footer-fluid">
     <footer class="footer text-center bg-secondary">
       <div class="social-media">
-        <a href="#"><img class="facebook-icon" src="assets/facebook_icon.png"></a>
-        <a href="#"><img class="twitter-icon" src="assets/twitter_icon.png"></a>
-        <a href="#"><img class="tumblr-icon" src="assets/tumblr_icon.png"></a>
-        <a href="#"><img class="ko-fi-icon" src="assets/ko-fi_icon.png"></a>
+        <a href="#"><img class="facebook-icon" src="assets/images/facebook_icon.png"></a>
+        <a href="#"><img class="twitter-icon" src="assets/images/twitter_icon.png"></a>
+        <a href="#"><img class="tumblr-icon" src="assets/images/tumblr_icon.png"></a>
+        <a href="#"><img class="ko-fi-icon" src="assets/images/ko-fi_icon.png"></a>
       </div>
       <p>&copy; 2018 Rose A. Lacroix.</p>
     </footer>
