--- a/index.html
+++ b/index.html
@@ -19,61 +19,41 @@
 
   <body>
 
+<!-- Banner -->
+<div class="container-fluid banner-main">
+  <div class="row justify-content-center banner-main">
+    <div class="col-lg-10 banner-main">
+      <img class ="img-fluid" src="assets/images/banner_test.jpg">
+    </div>
+  </div>
+</div>
+<!-- Banner -->
+
 <!-- Navbar -->
-  <div class="container-flex">
+  <div class="container-fluid nav-whole">
     <div class="row justify-content-center">
-      <div class="col-md-12">
-        <ul class="navbar nav justify-content-center nav-fill">
+      <div class="col-lg-10 navbar-width">
+        <ul class="navbar nav nav-fill">
           <li class="nav-item">
-            <a class="nav-link active" href="index.html">Home</a>
+            <a class="nav-link active nav-first" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">My projects</a>
           </li>
           <li class="nav-logo">
-            <a href="index.html"><img class="logo_nav" src="assets/images/logo_nav.png"></a>
+            <a href="index.html"><img class="logo_nav img-fluid" src="assets/images/logo_nav.png"></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link nav-last" href="#">Contact</a>
           </li>
         </ul>
       </div>
     </div>
   </div>
 <!-- Navbar -->
-
-<!-- Carousel -->
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md-10">
-          <div id="carouselHome" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="https://via.placeholder.com/930x470.png?text=First+slide" alt="First slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="https://via.placeholder.com/930x470.png?text=Second+slide" alt="Second slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="https://via.placeholder.com/930x470.png?text=Third+slide" alt="Third slide">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselHome" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselHome" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-<!-- Carousel -->
 
 <!-- Welcome section -->
   <div class="container welcome-section">
@@ -107,7 +87,6 @@
 <!-- Welcome section -->
 
 <!-- Footer -->
-  <div class="container-fluid footer-fluid">
     <footer class="footer text-center bg-secondary">
       <div class="social-media">
         <a href="#"><img class="facebook-icon" src="assets/images/facebook_icon.png"></a>
@@ -117,7 +96,6 @@
       </div>
       <p>&copy; 2018 Rose A. Lacroix.</p>
     </footer>
-  </div>
 <!-- Footer -->
 
 <!-- Scripts -->
