Background and fonts updated

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
 <!-- Welcome section -->
 
 <!-- Footer -->
-    <footer class="footer text-center bg-secondary">
+    <footer class="footer text-center">
       <div class="social-media">
-        <a href="#"><img class="facebook-icon" src="assets/images/facebook_icon.png"></a>
-        <a href="#"><img class="twitter-icon" src="assets/images/twitter_icon.png"></a>
-        <a href="#"><img class="tumblr-icon" src="assets/images/tumblr_icon.png"></a>
-        <a href="#"><img class="ko-fi-icon" src="assets/images/ko-fi_icon.png"></a>
+        <a href="https://rose-writes-and-drinks-tea.tumblr.com/"><img class="tumblr-icon" src="assets/images/tumblr_icon.png"></a>
+        <a href="https://github.com/RoseReaper"><img class="github-icon" src="assets/images/github_icon.png"></a>
+        <img class="discord-icon fake-link" data-toggle="popover" data-content="Rose A. Lacroix#2649" src="assets/images/discord_icon.png">
+        <a href="https://ko-fi.com/rosewrites"><img class="ko-fi-icon" src="assets/images/ko-fi_icon.png"></a>
       </div>
       <p>&copy; 2018 Rose A. Lacroix.</p>
     </footer>
