New fonts, welcome divs updated

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <!-- Welcome section -->
   <div class="container welcome-section">
     <div class="row justify-content-center">
-      <div class="col-md-6">
+      <div class="col-md-6 welcome-left">
         <h1 class="handwritten-title">Welcome</h1>
         <h2 class="welcome-title">to my online Portfolio</h2>
         <p>My name is Rose, and I'm a French developper, writer and artist. </br>
@@ -67,7 +67,7 @@
       </div>
       <div class="col-md-1">
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 welcome-right">
         <h1 class="latest-projects">Latest </br> Projects</h1>
         <div class="home-project-list">
           <p>
