--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
       <div class="col-md-6 welcome-left">
         <h1 class="handwritten-title">Welcome</h1>
         <h2 class="welcome-title">to my online Portfolio</h2>
-        <p>My name is Rose, and I'm a French developper, writer and artist. </br>
-        I share my work here. You can expect to find several projects, each one of a different nature.</p>
-        <a href="#">Read more about me</a>
+        <p>My name is <b>Rose</b>, and I'm a French <b>developper</b>, <b>writer</b> and <b>artist</b>. </br>
+        I share my work here. You can expect to find several projects of a different nature. Feel free to reach out if you have a question, or a suggestion about my content.</p>
+        <a class="welcome-readmore" href="#">Read more about me</a>
+        <img class="welcome-left-corner" src="assets/images/corner.png">
       </div>
       <div class="col-md-1">
       </div>
