Banner more responsive

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!-- Banner -->
 <div class="container-fluid banner-main">
   <div class="row justify-content-center banner-main">
-    <div class="col-lg-10 banner-main">
+    <div class="col-md-10 col-lg-9 col-xl-9 banner-main">
       <img class ="img-fluid" src="assets/images/banner_test.jpg">
     </div>
   </div>
@@ -32,23 +32,14 @@
 <!-- Navbar -->
   <div class="container-fluid nav-whole">
     <div class="row justify-content-center">
-      <div class="col-lg-10 navbar-width">
+      <div class="col-md-10 col-lg-9 col-xl-9 navbar-width">
         <ul class="navbar nav nav-fill">
-          <li class="nav-item">
-            <a class="nav-link active nav-first" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">My projects</a>
-          </li>
-          <li class="nav-logo">
-            <a href="index.html"><img class="logo_nav img-fluid" src="assets/images/logo_nav.png"></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About me</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link nav-last" href="#">Contact</a>
-          </li>
+          <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">My projects</a></li>
+          <li class="nav-item"><a class="nav-link d-none d-md-block" href="#">XXXXXXXXXXXXXXX</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">About me</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+          <li class="nav-logo"><a href="index.html"><img class="logo_nav img-fluid d-none d-md-block" src="assets/images/logo_nav.png"></a></li>
         </ul>
       </div>
     </div>
@@ -66,21 +57,30 @@
         <a class="welcome-readmore" href="#">Read more about me</a>
         <img class="welcome-left-corner" src="assets/images/corner.png">
       </div>
-      <div class="col-md-1">
-      </div>
-      <div class="col-md-3 welcome-right">
-        <h1 class="latest-projects">Latest </br> Projects</h1>
-        <div class="home-project-list">
-          <p>
-            <a href="#"><img src="https://via.placeholder.com/60x60.png?text=1"></a>
-            <a href="#"><img src="https://via.placeholder.com/60x60.png?text=2"></a>
-            <a href="#"><img src="https://via.placeholder.com/60x60.png?text=3"></a>
-          </p>
-          <p>
-            <a href="#"><img src="https://via.placeholder.com/60x60.png?text=4"></a>
-            <a href="#"><img src="https://via.placeholder.com/60x60.png?text=5"></a>
-            <a href="#"><img src="https://via.placeholder.com/60x60.png?text=6"></a>
-          </p>
+      <div class="col-md-4 welcome-right">
+        <h1 class="latest-projects handwritten-title">Latest Projects</h1>
+        <img class="welcome-right-corner" src="assets/images/corner.png">
+        <div class="row home-project-list">
+          <div class="col-md-3 d-flex justify-content-center img-project ">
+            <a href="#"><img src="https://via.placeholder.com/80x80.png?text=1"></a>
+          </div>
+          <div class="col-md-3 d-flex justify-content-center img-project">
+            <a href="#"><img src="https://via.placeholder.com/80x80.png?text=2"></a>
+          </div>
+          <div class="col-md-3 d-flex justify-content-center img-project">
+            <a href="#"><img src="https://via.placeholder.com/80x80.png?text=3"></a>
+          </div>
+        </div>
+        <div class="row home-project-list">
+          <div class="col-md-3 d-flex justify-content-center img-project">
+            <a href="#"><img src="https://via.placeholder.com/80x80.png?text=4"></a>
+          </div>
+          <div class="col-md-3 d-flex justify-content-center img-project">
+            <a href="#"><img src="https://via.placeholder.com/80x80.png?text=5"></a>
+          </div>
+          <div class="col-md-3 d-flex justify-content-center img-project">
+            <a href="#"><img src="https://via.placeholder.com/80x80.png?text=6"></a>
+          </div>
         </div>
       </div>
     </div>
