Menu logo fixed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta name="description" content="Website of Rose A. Lacroix. Developper, writer, artist.">
-      <meta name="keywords" content="Rose Lacroix,Rose A Lacroix,Rose Reaper,Rosereaper,DAZ Studio,Marvelous Designer,The Aroostook Witch">
+      <meta name="keywords" content="Rose Lacroix,Rose A Lacroix,Rose Reaper,Rosereaper,DAZ Studio,Luxrender,Reality,Marvelous Designer,The Aroostook Witch">
       <meta name="author" content="Rose A. Lacroix">
       <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -36,7 +36,7 @@
         <ul class="navbar nav nav-fill">
           <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#">My projects</a></li>
-          <li class="nav-item"><a class="nav-link d-none d-md-block" href="#">XXXXXXXXXXXXXXX</a></li>
+          <li class="nav-item"><a class="nav-link d-none d-md-block" href="#"><span style="display:inline-block; width: 350px;"></span></a></li>
           <li class="nav-item"><a class="nav-link" href="#">About me</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
           <li class="nav-logo"><a href="index.html"><img class="logo_nav img-fluid d-none d-md-block" src="assets/images/logo_nav.png"></a></li>
@@ -60,7 +60,7 @@
       <div class="col-md-4 welcome-right">
         <h1 class="latest-projects handwritten-title">Latest Projects</h1>
         <img class="welcome-right-corner" src="assets/images/corner.png">
-        <div class="row home-project-list">
+        <div class="row home-project-list justify-content-center">
           <div class="col-md-3 d-flex justify-content-center img-project ">
             <a href="#"><img src="https://via.placeholder.com/80x80.png?text=1"></a>
           </div>
@@ -71,7 +71,7 @@
             <a href="#"><img src="https://via.placeholder.com/80x80.png?text=3"></a>
           </div>
         </div>
-        <div class="row home-project-list">
+        <div class="row home-project-list justify-content-center">
           <div class="col-md-3 d-flex justify-content-center img-project">
             <a href="#"><img src="https://via.placeholder.com/80x80.png?text=4"></a>
           </div>
@@ -90,10 +90,10 @@
 <!-- Footer -->
     <footer class="footer text-center">
       <div class="social-media">
-        <a href="https://rose-writes-and-drinks-tea.tumblr.com/"><img class="tumblr-icon" src="assets/images/tumblr_icon.png"></a>
-        <a href="https://github.com/RoseReaper"><img class="github-icon" src="assets/images/github_icon.png"></a>
+        <a target="_blank" href="https://rose-writes-and-drinks-tea.tumblr.com/"><img class="tumblr-icon" src="assets/images/tumblr_icon.png"></a>
+        <a target="_blank" href="https://github.com/RoseReaper"><img class="github-icon" src="assets/images/github_icon.png"></a>
         <img class="discord-icon fake-link" data-toggle="popover" data-content="Rose A. Lacroix#2649" src="assets/images/discord_icon.png">
-        <a href="https://ko-fi.com/rosewrites"><img class="ko-fi-icon" src="assets/images/ko-fi_icon.png"></a>
+        <a target="_blank" href="https://ko-fi.com/rosealacroix"><img class="ko-fi-icon" src="assets/images/ko-fi_icon.png"></a>
       </div>
       <p>&copy; 2018 Rose A. Lacroix.</p>
     </footer>
