Navbar more responsive.

--- a/index.html
+++ b/index.html
@@ -20,26 +20,22 @@
   <body>
 
 <!-- Banner -->
-<div class="container-fluid banner-main">
-  <div class="row justify-content-center banner-main">
-    <div class="col-md-10 col-lg-9 col-xl-9 banner-main">
-      <img class ="img-fluid" src="assets/images/banner_test.jpg">
-    </div>
+  <div class="banner-main">
+        <img class ="banner-main" src="assets/images/banner_test.jpg">
   </div>
-</div>
 <!-- Banner -->
 
 <!-- Navbar -->
-  <div class="container-fluid nav-whole">
+  <div class="container-fluid">
     <div class="row justify-content-center">
-      <div class="col-md-10 col-lg-9 col-xl-9 navbar-width">
+      <div class="d-none d-sm-block col-md-12 navbar-width">
         <ul class="navbar nav nav-fill">
           <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#">My projects</a></li>
-          <li class="nav-item"><a class="nav-link d-none d-md-block" href="#"><span style="display:inline-block; width: 350px;"></span></a></li>
+          <li class="nav-item"><a class="nav-link nav-link-empty d-none d-lg-block" href="#"></a></li>
           <li class="nav-item"><a class="nav-link" href="#">About me</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-          <li class="nav-logo"><a href="index.html"><img class="logo_nav img-fluid d-none d-md-block" src="assets/images/logo_nav.png"></a></li>
+          <li class="nav-logo"><a href="index.html"><img class="logo_nav d-none d-lg-block" src="assets/images/logo_nav.png"></a></li>
         </ul>
       </div>
     </div>
@@ -61,24 +57,24 @@
         <h1 class="latest-projects handwritten-title">Latest Projects</h1>
         <img class="welcome-right-corner" src="assets/images/corner.png">
         <div class="row home-project-list justify-content-center">
-          <div class="col-md-3 d-flex justify-content-center img-project ">
+          <div class="col-6 col-md-3 d-flex justify-content-center img-project p-b-10">
             <a href="#"><img src="https://via.placeholder.com/80x80.png?text=1"></a>
           </div>
-          <div class="col-md-3 d-flex justify-content-center img-project">
+          <div class="col-6 col-md-3 d-flex justify-content-center img-project p-b-10">
             <a href="#"><img src="https://via.placeholder.com/80x80.png?text=2"></a>
           </div>
-          <div class="col-md-3 d-flex justify-content-center img-project">
+          <div class="col-6 col-md-3 d-flex justify-content-center img-project p-b-10">
             <a href="#"><img src="https://via.placeholder.com/80x80.png?text=3"></a>
           </div>
         </div>
         <div class="row home-project-list justify-content-center">
-          <div class="col-md-3 d-flex justify-content-center img-project">
+          <div class="col-6 col-md-3 d-flex justify-content-center img-project p-b-10">
             <a href="#"><img src="https://via.placeholder.com/80x80.png?text=4"></a>
           </div>
-          <div class="col-md-3 d-flex justify-content-center img-project">
+          <div class="col-6 col-md-3 d-flex justify-content-center img-project p-b-10">
             <a href="#"><img src="https://via.placeholder.com/80x80.png?text=5"></a>
           </div>
-          <div class="col-md-3 d-flex justify-content-center img-project">
+          <div class="col-6 col-md-3 d-flex justify-content-center img-project p-b-10">
             <a href="#"><img src="https://via.placeholder.com/80x80.png?text=6"></a>
           </div>
         </div>
