--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <meta name="keywords" content="Rose Lacroix,Rose A Lacroix,Rose Reaper,Rosereaper,DAZ Studio,Luxrender,Reality,Marvelous Designer,The Aroostook Witch">
       <meta name="author" content="Rose A. Lacroix">
       <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
       <link rel="stylesheet" href="styles/style.css"/>
 
   </head>
@@ -29,14 +29,14 @@
   <div class="container-fluid">
     <div class="row justify-content-center">
       <div class="d-none d-sm-block col-md-12 navbar-width">
-        <ul class="navbar nav nav-fill">
-          <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">My projects</a></li>
-          <li class="nav-item"><a class="nav-link nav-link-empty d-none d-lg-block" href="#"></a></li>
-          <li class="nav-item"><a class="nav-link" href="#">About me</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-          <li class="nav-logo"><a href="index.html"><img class="logo_nav d-none d-lg-block" src="assets/images/logo_nav.png"></a></li>
-        </ul>
+        <div class="nav-fill row justify-content-center">
+          <div class"col-2"><a class="nav-link active" href="index.html">Home</a></div>
+          <div class"col-2"><a class="nav-link" href="#">My projects</a></div>
+          <div class"col-4"><a class="nav-link-empty d-none d-lg-block"></a></div>
+          <div class"col-2"><a class="nav-link" href="#">About me</a></div>
+          <div class"col-2"><a class="nav-link" href="#">Contact</a></div>
+          <a href="index.html"><img class="logo_nav d-none d-lg-block" src="assets/images/logo_nav.png"></a>
+        </div>
       </div>
     </div>
   </div>
@@ -57,25 +57,25 @@
         <h1 class="latest-projects handwritten-title">Latest Projects</h1>
         <img class="welcome-right-corner" src="assets/images/corner.png">
         <div class="row home-project-list justify-content-center">
-          <div class="col-6 col-md-3 d-flex justify-content-center img-project p-b-10">
-            <a href="#"><img src="https://via.placeholder.com/80x80.png?text=1"></a>
+          <div class="col-3 img-project">
+            <a href="#"><img class="img-fluid" src="https://via.placeholder.com/80x80.png?text=1"></a>
           </div>
-          <div class="col-6 col-md-3 d-flex justify-content-center img-project p-b-10">
-            <a href="#"><img src="https://via.placeholder.com/80x80.png?text=2"></a>
+          <div class="col-3 img-project">
+            <a href="#"><img class="img-fluid" src="https://via.placeholder.com/80x80.png?text=2"></a>
           </div>
-          <div class="col-6 col-md-3 d-flex justify-content-center img-project p-b-10">
-            <a href="#"><img src="https://via.placeholder.com/80x80.png?text=3"></a>
+          <div class="col-3 img-project">
+            <a href="#"><img class="img-fluid" src="https://via.placeholder.com/80x80.png?text=3"></a>
           </div>
         </div>
         <div class="row home-project-list justify-content-center">
-          <div class="col-6 col-md-3 d-flex justify-content-center img-project p-b-10">
-            <a href="#"><img src="https://via.placeholder.com/80x80.png?text=4"></a>
+          <div class="col-3 img-project">
+            <a href="#"><img class="img-fluid" src="https://via.placeholder.com/80x80.png?text=4"></a>
           </div>
-          <div class="col-6 col-md-3 d-flex justify-content-center img-project p-b-10">
-            <a href="#"><img src="https://via.placeholder.com/80x80.png?text=5"></a>
+          <div class="col-3 img-project">
+            <a href="#"><img class="img-fluid" src="https://via.placeholder.com/80x80.png?text=5"></a>
           </div>
-          <div class="col-6 col-md-3 d-flex justify-content-center img-project p-b-10">
-            <a href="#"><img src="https://via.placeholder.com/80x80.png?text=6"></a>
+          <div class="col-3 img-project">
+            <a href="#"><img class="img-fluid" src="https://via.placeholder.com/80x80.png?text=6"></a>
           </div>
         </div>
       </div>
@@ -86,6 +86,8 @@
 <!-- Footer -->
     <footer class="footer text-center">
       <div class="social-media">
+        <a target="_blank" href="https://www.facebook.com/rosealacroix"><img class="facebook-icon" src="assets/images/facebook_icon.png"></a>
+        <a target="_blank" href="https://twitter.com/RoseALacroix"><img class="twitter-icon" src="assets/images/twitter_icon.png"></a>
         <a target="_blank" href="https://rose-writes-and-drinks-tea.tumblr.com/"><img class="tumblr-icon" src="assets/images/tumblr_icon.png"></a>
         <a target="_blank" href="https://github.com/RoseReaper"><img class="github-icon" src="assets/images/github_icon.png"></a>
         <img class="discord-icon fake-link" data-toggle="popover" data-content="Rose A. Lacroix#2649" src="assets/images/discord_icon.png">
@@ -97,8 +99,8 @@
 
 <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <script type="text/javascript" src="scripts/script.js"></script>
 <!-- Scripts -->
   </body>
