--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
   <div class="container-fluid">
     <div class="row justify-content-center">
       <div class="d-none d-sm-block col-md-12 navbar-width">
-        <div class="nav-fill row justify-content-center">
-          <div class"col-2"><a class="nav-link active" href="index.html">Home</a></div>
-          <div class"col-2"><a class="nav-link" href="#">My projects</a></div>
-          <div class"col-4"><a class="nav-link-empty d-none d-lg-block"></a></div>
-          <div class"col-2"><a class="nav-link" href="#">About me</a></div>
-          <div class"col-2"><a class="nav-link" href="#">Contact</a></div>
+        <ul class="row justify-content-center nav-fill">
+          <li><a class="nav-link active" href="index.html">Home</a></li>
+          <li><a class="nav-link" href="#">My projects</a></li>
+          <li><a class="nav-link-empty d-none d-lg-block"></a></li>
+          <li><a class="nav-link" href="#">About me</a></li>
+          <li><a class="nav-link" href="#">Contact</a></li>
           <a href="index.html"><img class="logo_nav d-none d-lg-block" src="assets/images/logo_nav.png"></a>
-        </div>
+        </ul>
       </div>
     </div>
   </div>
