--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <!-- Navbar -->
 
 <!-- Welcome section -->
-  <div class="container welcome-section">
+  <div class="container welcome-section wrapper">
     <div class="row justify-content-center">
       <div class="col-md-6 welcome-left">
         <h1 class="handwritten-title">Welcome</h1>
@@ -87,12 +87,15 @@
           </div>
         </div>
       </div>
+      <div class="sticky"></div>
     </div>
   </div>
 <!-- Welcome section -->
 
+
+
 <!-- Footer -->
-    <footer class="footer text-center">
+    <footer class="footer-content text-center">
       <div class="social-media">
         <a target="_blank" href="https://www.facebook.com/rosealacroix"><img class="facebook-icon" src="assets/images/facebook_icon.png"></a>
         <a target="_blank" href="https://twitter.com/RoseALacroix"><img class="twitter-icon" src="assets/images/twitter_icon.png"></a>
