--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <!-- Navbar -->
 
 <!-- Welcome section -->
-  <div class="container welcome-section wrapper">
+  <div class="container welcome-section">
     <div class="row justify-content-center">
       <div class="col-md-6 welcome-left">
         <h1 class="handwritten-title">Welcome</h1>
@@ -87,12 +87,9 @@
           </div>
         </div>
       </div>
-      <div class="sticky"></div>
     </div>
   </div>
 <!-- Welcome section -->
-
-
 
 <!-- Footer -->
     <footer class="footer-content text-center">
@@ -101,12 +98,13 @@
         <a target="_blank" href="https://twitter.com/RoseALacroix"><img class="twitter-icon" src="assets/images/twitter_icon.png"></a>
         <a target="_blank" href="https://rose-writes-and-drinks-tea.tumblr.com/"><img class="tumblr-icon" src="assets/images/tumblr_icon.png"></a>
         <a target="_blank" href="https://github.com/RoseReaper"><img class="github-icon" src="assets/images/github_icon.png"></a>
-        <img class="discord-icon fake-link" data-toggle="popover" data-content="Rose A. Lacroix#2649" src="assets/images/discord_icon.png">
-        <a target="_blank" href="https://ko-fi.com/rosealacroix"><img class="ko-fi-icon" src="assets/images/ko-fi_icon.png"></a>
-      </div>
       <p>&copy; 2018 Rose A. Lacroix.</p>
     </footer>
 <!-- Footer -->
+
+<div class="kofi-icon d-none d-sm-block">
+  <a href="https://ko-fi.com/rosealacroix" alt="Ko-Fi_link" target="_blank" title="Want to buy me a tea?"><img src="assets/images/kofi_button.png" width="100px"></a>
+</div>
 
 <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
