--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <meta name="author" content="Rose A. Lacroix">
       <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
       <link rel="stylesheet" href="styles/style.css"/>
 
   </head>
@@ -39,7 +40,7 @@
   </div>
 
   <nav class="mobile-menu d-lg-none d-xl-nones">
-    <header>Menu<span>×</span></header>
+    <header>Menu<span>X</span></header>
     <ol>
         <li class="menu-item"><a href="index.html">Home</a></li>
         <li class="menu-item"><a href="#">My projects</a></li>
@@ -57,7 +58,7 @@
         <h1 class="handwritten-title">Welcome</h1>
         <h2 class="welcome-title">to my online Portfolio</h2>
         <p>My name is <b>Rose</b>, and I'm a French <b>developper</b>, <b>writer</b> and <b>artist</b>. </br>
-        I share my work here. You can expect to find several projects of a different nature. Feel free to reach out if you have a question, or a suggestion about my content.</p>
+        I share my work here. You can expect to find several projects, each of a different nature. Feel free to reach out if you have a question, or a suggestion about my content.</p>
         <a class="welcome-readmore" href="#">Read more about me</a>
         <img class="welcome-left-corner d-none d-lg-block d-xl-block" src="assets/images/corner.png">
       </div>
@@ -94,16 +95,16 @@
 <!-- Footer -->
     <footer class="footer-content text-center">
       <div class="social-media">
-        <a target="_blank" href="https://www.facebook.com/rosealacroix"><img class="facebook-icon" src="assets/images/facebook_icon.png"></a>
-        <a target="_blank" href="https://twitter.com/RoseALacroix"><img class="twitter-icon" src="assets/images/twitter_icon.png"></a>
-        <a target="_blank" href="https://rose-writes-and-drinks-tea.tumblr.com/"><img class="tumblr-icon" src="assets/images/tumblr_icon.png"></a>
-        <a target="_blank" href="https://github.com/RoseReaper"><img class="github-icon" src="assets/images/github_icon.png"></a>
+        <a target="_blank" class="fab fa-facebook-square" href="https://www.facebook.com/rosealacroix"></a>
+        <a target="_blank" class="fab fa-twitter-square" href="https://twitter.com/RoseALacroix"></a>
+        <a target="_blank" class="fab fa-tumblr-square" href="https://rose-writes-and-drinks-tea.tumblr.com/"></a>
+        <a target="_blank" class="fab fa-github-square" href="https://github.com/RoseReaper"></a>
       <p>&copy; 2018 Rose A. Lacroix.</p>
     </footer>
 <!-- Footer -->
 
 <div class="kofi-icon d-none d-sm-block">
-  <a href="https://ko-fi.com/rosealacroix" alt="Ko-Fi_link" target="_blank" title="Want to buy me a tea?"><img src="assets/images/kofi_button.png" width="100px"></a>
+  <a href="https://ko-fi.com/rosealacroix" target="_blank" title="Want to buy me a tea?"><img src="assets/images/kofi_button.png" width="100px"></a>
 </div>
 
 <!-- Scripts -->
