--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
 <!-- Welcome section -->
   <div class="container welcome-section">
     <div class="row justify-content-center">
-      <div class="col-md-6 welcome-left">
+      <div class="col-10 col-md-6 welcome-left">
         <h1 class="handwritten-title">Welcome</h1>
         <h2 class="welcome-title">to my online Portfolio</h2>
-        <p>My name is <b>Rose</b>, and I'm a French <b>developper</b>, <b>writer</b> and <b>artist</b>. </br>
+        <p>My name is <b>Rose</b>, and I'm a French <b>developer</b>, <b>writer</b> and <b>artist</b>. </br>
         I share my work here. You can expect to find several projects, each of a different nature. Feel free to reach out if you have a question, or a suggestion about my content.</p>
         <a class="welcome-readmore" href="#">Read more about me</a>
         <img class="welcome-left-corner d-none d-lg-block d-xl-block" src="assets/images/corner.png">
       </div>
-      <div class="col-md-4 welcome-right">
+      <div class="col-10 col-md-4 welcome-right">
         <h1 class="latest-projects handwritten-title">Latest Projects</h1>
         <img class="welcome-right-corner d-none d-lg-block d-xl-block" src="assets/images/corner.png">
         <div class="row home-project-list justify-content-center">
