--- a/contact/contact.html
+++ b/contact/contact.html
@@ -65,7 +65,7 @@
         <textarea name="message" placeholder="Enter your message here" style="height:90px" required></textarea>
         <label for="attachment"><i class="fas fa-paperclip"></i> Attachment (optional)</label>
         <input type="file" name="file" placeholder="">
-        <input type="hidden" name="_after" value="https://rosealacroix.com">
+        <input type="hidden" name="_after" value="https://rosealacroix.com/contact.html">
         <input type="hidden" name="_honeypot" value="">
         <input type="hidden" name="_confirmation" value="The message has been successfully sent.">
         <input type="submit" name="submit" value="Submit" class="contact-button">
