--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <li class="nav-li"><a class="nav-link" href="#">My projects</a></li>
       <li class="nav-li"><a class="nav-link-empty" href="index.html"><img class="logo-nav" src="assets/images/logo_nav.png" alt="Rose A. Lacroix: developer, artist, writer. Flowers frame the logo"></a></li>
       <li class="nav-li"><a class="nav-link" href="#">About me</a></li>
-      <li class="nav-li"><a class="nav-link" href="contact/contact.html">Contact</a></li>
+      <li class="nav-li"><a class="nav-link" href="pages/contact.html">Contact</a></li>
     </ul>
   </div>
 
@@ -45,7 +45,7 @@
         <li class="menu-item"><a href="index.html">Home</a></li>
         <li class="menu-item"><a href="#">My projects</a></li>
         <li class="menu-item"><a href="#">About me</a></li>
-        <li class="menu-item"><a href="contact/contact.html">Contact</a></li>
+        <li class="menu-item"><a href="pages/contact.html">Contact</a></li>
     </ol>
     <footer><button aria-label="Toggle Menu">Toggle</button></footer>
   </nav>
