Menu updated, new link format

--- a/contact/index.html
+++ b/contact/index.html
@@ -24,31 +24,31 @@
   <div class="banner-main">
         <img class ="banner-main d-none d-lg-block d-xl-block" src="../assets/images/banner_test.jpg" alt="A steaming cup of tea on an opened notebook, next to a pen cased inside a paper flower">
         <img class ="banner-main-mobile d-lg-none d-xl-none" src="../assets/images/banner_test.jpg" alt="A steaming cup of tea on an opened notebook, next to a pen cased inside a paper flower">
-        <img class="logo-mobile-nav d-lg-none d-xl-none" src="../assets/images/logo_nav.png" alt="Rose A. Lacroix: developer, artist, writer. Flowers frame the logo">
+        <img class="logo-mobile-nav d-lg-none d-xl-none" href="https://rosealacroix.com/" src="../assets/images/logo_nav.png" alt="Rose A. Lacroix: developer, artist, writer. Flowers frame the logo">
   </div>
 <!-- Banner -->
 
 <!-- Navbar -->
-  <div class="navbar-width d-none d-lg-block d-xl-block" role="navigation">
-    <ul class="nav-fill">
-      <li class="nav-li"><a class="nav-link active" href="../index.html">Home</a></li>
-      <li class="nav-li"><a class="nav-link" href="#">My projects</a></li>
-      <li class="nav-li"><a class="nav-link-empty" href="../index.html"><img class="logo-nav" src="../assets/images/logo_nav.png" alt="Rose A. Lacroix: developer, artist, writer. Flowers frame the logo"></a></li>
-      <li class="nav-li"><a class="nav-link" href="#">About me</a></li>
-      <li class="nav-li"><a class="nav-link" href="pages/contact.html">Contact</a></li>
-    </ul>
-  </div>
+<div class="navbar-width d-none d-lg-block d-xl-block" role="navigation">
+  <ul class="nav-fill">
+    <li class="nav-li"><a class="nav-link" href="#">Projects</a></li>
+    <li class="nav-li"><a class="nav-link active" href="#">Gallery</a></li>
+    <li class="nav-li"><a class="nav-link-empty" href="https://rosealacroix.com/"><img class="logo-nav" src="assets/images/logo_nav.png" alt="Rose A. Lacroix: developer, artist, writer. Flowers frame the logo"></a></li>
+    <li class="nav-li"><a class="nav-link" href="#">About me</a></li>
+    <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/contact/">Contact</a></li>
+  </ul>
+</div>
 
-  <nav class="mobile-menu d-lg-none d-xl-nones" role="navigation">
-    <header>Menu<span>x</span></header>
-    <ol>
-        <li class="menu-item"><a href="../index.html">Home</a></li>
-        <li class="menu-item"><a href="#">My projects</a></li>
-        <li class="menu-item"><a href="#">About me</a></li>
-        <li class="menu-item"><a href="pages/contact.html">Contact</a></li>
-    </ol>
-    <footer><button aria-label="Toggle Menu">Toggle</button></footer>
-  </nav>
+<nav class="mobile-menu d-lg-none d-xl-nones" role="navigation">
+  <header>Menu<span>x</span></header>
+  <ol>
+    <li class="nav-li"><a class="nav-link" href="#">Projects</a></li>
+    <li class="nav-li"><a class="nav-link active" href="#">Gallery</a></li>
+    <li class="menu-item"><a href="#">About me</a></li>
+    <li class="menu-item"><a href="pages/contact.html">Contact</a></li>
+  </ol>
+  <footer><button aria-label="Toggle Menu">Toggle</button></footer>
+</nav>
 <!-- Navbar -->
 
 <!-- Contact form -->
