--- a/projects/index.html
+++ b/projects/index.html
@@ -52,29 +52,79 @@
 </nav>
 <!-- Navbar -->
 
-<!-- Contact form -->
-<div class="container">
+<!-- Project list -->
+<div class="container project-list">
   <div class="row justify-content-center">
     <div class="col-12 col-md-10">
-      <form class="contact-form" action="https://mailthis.to/RoseALacroix" method="POST" encType="multipart/form-data">
-        <h1 class="title-contact">Contact Form</h1>
-        <label for="name"><i class="fas fa-user"></i> Name:</label>
-        <input type="text" name="name" placeholder="Your name" required>
-        <label for="email"><i class="fas fa-envelope"></i> Email:</label>
-        <input type="email" name="email" placeholder="you@mail.com" required>
-        <label for="message"><i class="fas fa-comments"></i> Your message:</label>
-        <textarea name="message" placeholder="Enter your message here" style="height:90px" required></textarea>
-        <label for="attachment"><i class="fas fa-paperclip"></i> Attachment (optional)</label>
-        <input type="file" name="file" placeholder="">
-        <input type="hidden" name="_after" value="https://rosealacroix.com/pages/contact.html">
-        <input type="hidden" name="_honeypot" value="">
-        <input type="hidden" name="_confirmation" value="The message has been successfully sent.">
-        <input type="submit" name="submit" value="Submit" class="contact-button">
-      </form>
+      <h1 class="title-projects">My Projects</h1>
+      <div class="row projects-row1">
+        <div class="col-12 col-md-4">
+          <div class="card">
+            <img class="card-img-top" src=".../100px180/">
+            <div class="card-body">
+              <h5 class="card-title"><a href="#">Project 1</a></h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-4">
+          <div class="card">
+            <img class="card-img-top" src=".../100px180/">
+            <div class="card-body">
+              <h5 class="card-title"><a href="#">Project 2</a></h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-4">
+          <div class="card">
+            <img class="card-img-top" src=".../100px180/">
+            <div class="card-body">
+              <h5 class="card-title"><a href="#">Project 3</a></h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row projects-row2">
+        <div class="col-12 col-md-4">
+          <div class="card">
+            <img class="card-img-top" src=".../100px180/">
+            <div class="card-body">
+              <h5 class="card-title"><a href="#">Project 4</a></h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-4">
+          <div class="card">
+            <img class="card-img-top" src=".../100px180/">
+            <div class="card-body">
+              <h5 class="card-title"><a href="#">Project 5</a></h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-4">
+          <div class="card">
+            <img class="card-img-top" src=".../100px180/">
+            <div class="card-body">
+              <h5 class="card-title"><a href="#">Project 6</a></h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
-<!-- Contact form -->
+<!-- Project list -->
 
 <!-- Footer -->
   <footer class="footer-content text-center">
