--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <h2 class="welcome-title">to my online Portfolio</h2>
         <p>My name is <b>Rose</b>, and I'm a French <b>developer</b>, <b>writer</b> and <b>artist</b>. </br>
         I share my work here. You can expect to find several projects, each of a different nature. Feel free to reach out if you have a question, or a suggestion about my content.</p>
-        <a class="welcome-readmore" href="#">Read more about me</a>
+        <a class="welcome-readmore" href="https://rosealacroix.com/about-me/">Read more about me</a>
         <img class="welcome-left-corner d-none d-lg-block d-xl-block" src="assets/images/corner.png">
       </div>
       <div class="col-10 col-md-4 welcome-right">
