--- a/about-me/index.html
+++ b/about-me/index.html
@@ -52,6 +52,19 @@
 </nav>
 <!-- Navbar -->
 
+<!-- About me -->
+<div class="container about-me">
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-10">
+      <h1 class="title-about-me">Who I am</h1>
+      <p>Rose Lacroix is the character of a dropped novel project from my teenage years. That name (or Rose Reaper on some platforms) eventually became how I call myself on the Internet.</p>
+      <p>I am a tea, lipstick addict and reluctant adult who went into programming, after spending five years as a hotel receptionist. I studied French, British, American litterature, English, and art. I used to draw, but I mostly do 3D renders and a bit of photography now. I'm currently developing programs with COBOL at work, and I'm curious to try other tools for my personal projects. So far I've used <b>HTML, CSS, Javascript/JQuery, PHP, Ajax, MySQL</b>.</p>
+      <p>In my free time I like to write fiction, work on 3D scenes or models, and sew. I also procastinate a lot by watching series, browsing memes, cuddling with my cat, and daydreaming about writing (that's a big thing in writing circles, don't ask). I do my 3D renders in <b>DAZ Studio</b>, either with the Iray or Lux render. I use <b>Zbrush</b> to alter models, <b>Marvelous Designer</b> to create dynamic clothes, and <b>Photoshop</b> for texturing and post work.</p>
+    </div>
+  </div>
+</div>
+<!-- About me -->
+
 <!-- Footer -->
   <footer class="footer-content text-center">
     <div class="social-media">
