--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="banner-main">
         <img class ="banner-main d-none d-lg-block d-xl-block" src="assets/images/banner_test.jpg" alt="A steaming cup of tea on an opened notebook, next to a pen cased inside a paper flower">
         <img class ="banner-main-mobile d-lg-none d-xl-none" src="assets/images/banner_test.jpg" alt="A steaming cup of tea on an opened notebook, next to a pen cased inside a paper flower">
-        <img class="logo-mobile-nav d-lg-none d-xl-none" href="https://rosealacroix.com/" src="assets/images/logo_nav.png" alt="Rose A. Lacroix: developer, artist, writer. Flowers frame the logo">
+        <img class="logo-mobile-nav d-lg-none d-xl-none" src="assets/images/logo_nav.png" alt="Rose A. Lacroix: developer, artist, writer. Flowers frame the logo">
   </div>
 <!-- Banner -->
 
