Contact form fix

--- a/contact/index.html
+++ b/contact/index.html
@@ -66,7 +66,7 @@
         <textarea name="message" placeholder="Enter your message here" style="height:90px" required></textarea>
         <label for="attachment"><i class="fas fa-paperclip"></i> Attachment (optional)</label>
         <input type="file" name="file" placeholder="">
-        <input type="hidden" name="_after" value="https://rosealacroix.com/pages/contact.html">
+        <input type="hidden" name="_after" value="https://rosealacroix.com/contact/">
         <input type="hidden" name="_honeypot" value="">
         <input type="hidden" name="_confirmation" value="The message has been successfully sent.">
         <input type="submit" name="submit" value="Submit" class="contact-button">
