Sort option added to projects list

--- a/projects/index.html
+++ b/projects/index.html
@@ -57,9 +57,10 @@
   <div class="row justify-content-center">
     <div class="col-12 col-md-11">
       <h1 class="title-projects">My Projects</h1>
+      <div id="buttons"></div>
       <div class="row projects-row1">
         <div class="col-12 col-md-4">
-          <div class="card">
+          <div class="card" data-tags="Coding">
             <img class="card-img-top" src=".../100px180/">
             <div class="card-body">
               <h5 class="card-title"><a href="#">Project 1</a></h5>
@@ -69,7 +70,7 @@
         </div>
 
         <div class="col-12 col-md-4">
-          <div class="card">
+          <div class="card" data-tags="Writing">
             <img class="card-img-top" src=".../100px180/">
             <div class="card-body">
               <h5 class="card-title"><a href="#">Project 2</a></h5>
@@ -79,7 +80,7 @@
         </div>
 
         <div class="col-12 col-md-4">
-          <div class="card">
+          <div class="card" data-tags="Writing">
             <img class="card-img-top" src=".../100px180/">
             <div class="card-body">
               <h5 class="card-title"><a href="#">Project 3</a></h5>
@@ -91,7 +92,7 @@
 
       <div class="row projects-row2">
         <div class="col-12 col-md-4">
-          <div class="card">
+          <div class="card" data-tags="3D Model">
             <img class="card-img-top" src=".../100px180/">
             <div class="card-body">
               <h5 class="card-title"><a href="#">Project 4</a></h5>
@@ -101,7 +102,7 @@
         </div>
 
         <div class="col-12 col-md-4">
-          <div class="card">
+          <div class="card" data-tags="Coding">
             <img class="card-img-top" src=".../100px180/">
             <div class="card-body">
               <h5 class="card-title"><a href="#">Project 5</a></h5>
@@ -111,7 +112,7 @@
         </div>
 
         <div class="col-12 col-md-4">
-          <div class="card">
+          <div class="card" data-tags="Writing">
             <img class="card-img-top" src=".../100px180/">
             <div class="card-body">
               <h5 class="card-title"><a href="#">Project 6</a></h5>
