--- a/projects/index.html
+++ b/projects/index.html
@@ -59,8 +59,8 @@
       <h1 class="title-projects">My Projects</h1>
       <div id="buttons"></div>
       <div class="row projects-row1">
-        <div class="col-12 col-md-4">
-          <div class="card" data-tags="Coding">
+        <div class="col-12 col-md-4 project" data-tags="Coding">
+          <div class="card">
             <img class="card-img-top" src=".../100px180/">
             <div class="card-body">
               <h5 class="card-title"><a href="#">Project 1</a></h5>
@@ -69,8 +69,8 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-4">
-          <div class="card" data-tags="Writing">
+        <div class="col-12 col-md-4 project" data-tags="Writing">
+          <div class="card">
             <img class="card-img-top" src=".../100px180/">
             <div class="card-body">
               <h5 class="card-title"><a href="#">Project 2</a></h5>
@@ -79,8 +79,8 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-4">
-          <div class="card" data-tags="Writing">
+        <div class="col-12 col-md-4 project" data-tags="Writing">
+          <div class="card">
             <img class="card-img-top" src=".../100px180/">
             <div class="card-body">
               <h5 class="card-title"><a href="#">Project 3</a></h5>
@@ -91,8 +91,8 @@
       </div>
 
       <div class="row projects-row2">
-        <div class="col-12 col-md-4">
-          <div class="card" data-tags="3D Model">
+        <div class="col-12 col-md-4 project" data-tags="3D Model">
+          <div class="card">
             <img class="card-img-top" src=".../100px180/">
             <div class="card-body">
               <h5 class="card-title"><a href="#">Project 4</a></h5>
@@ -101,8 +101,8 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-4">
-          <div class="card" data-tags="Coding">
+        <div class="col-12 col-md-4 project" data-tags="Coding">
+          <div class="card">
             <img class="card-img-top" src=".../100px180/">
             <div class="card-body">
               <h5 class="card-title"><a href="#">Project 5</a></h5>
@@ -111,8 +111,8 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-4">
-          <div class="card" data-tags="Writing">
+        <div class="col-12 col-md-4 project" data-tags="Writing">
+          <div class="card">
             <img class="card-img-top" src=".../100px180/">
             <div class="card-body">
               <h5 class="card-title"><a href="#">Project 6</a></h5>
