--- a/projects/index.html
+++ b/projects/index.html
@@ -58,7 +58,7 @@
     <div class="col-12 col-md-11">
       <h1 class="title-projects">My Projects</h1>
       <div id="buttons"></div>
-      <div class="row projects-row1">
+      <div class="row projects-row">
         <div class="col-12 col-md-4 project" data-tags="Coding">
           <div class="card">
             <img class="card-img-top" src=".../100px180/">
@@ -88,9 +88,7 @@
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="row projects-row2">
         <div class="col-12 col-md-4 project" data-tags="3D Model">
           <div class="card">
             <img class="card-img-top" src=".../100px180/">
